--- a/data/Deaf Launch.json
+++ b/data/Deaf Launch.json
@@ -1,9 +1,9 @@
 {
     "id": 74803822,
-    "name": "Shitty A2Marbl",
-    "author": "chspchips",
+    "name": "Deaf Launch",
+    "author": "LegoScratchTanksuber",
     "creators": [],
-    "verifier": "iRaily",
+    "verifier": "ShayPlaz",
     "verification": "https://youtu.be/U21gyCuwCO8",
     "showcase": "https://youtu.be/higuysgoodday",
     "percentToQualify": 100,
