--- a/data/Deaf Launch.json
+++ b/data/Deaf Launch.json
@@ -2,7 +2,7 @@
     "id": 74803822,
     "name": "Deaf Launch",
     "author": "LegoScratchTanksuber",
-    "creators": [],
+    "creator": [],
     "verifier": "ShayPlaz",
     "verification": "https://youtu.be/U21gyCuwCO8",
     "showcase": "https://youtu.be/higuysgoodday",
